fix: change tech

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ SESSION_MAX_AGE=86400000
 SESSION_TTL=86400
 
 # Secret keys
-SECRET=ixN0-Vqnj9JAQzE(u*Z59xj#8ZKujr%w
+SECRET=GNnx+ARKa.HER!q1Wf{dr6[OAEG7@(
 
 # Upload folder path
 UPLOAD_FOLDER=uploads
@@ -24,9 +24,10 @@ CORS_WHITELIST=http://localhost:8001
 HOST_NAME=localhost
 PORT=8000
 RESTAPI_ENDPOINT=/rest
+GRAPHQL_ENDPOINT=/graphql
 
 # Sql server configuration
 DB_USER=sa
-DB_PASSWORD=
+DB_PASSWORD=123
 DB_SERVER=localhost
-DB_DATABASE=manage-applicant
+DB_DATABASE=manage_applicant
