--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@apollo/server": "^4.11.0",
+    "@graphql-tools/load-files": "7.0.0",
+    "@graphql-tools/merge": "9.0.7",
+    "@graphql-tools/schema": "10.0.6",
+    "@graphql-tools/utils": "10.5.4",
+    "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -21,12 +27,20 @@
     "express": "^4.19.2",
     "express-device": "^0.4.2",
     "express-session": "^1.18.0",
+    "graphql": "16.9.0",
+    "graphql-middleware": "^6.1.35",
+    "graphql-scalars": "1.23.0",
+    "graphql-subscriptions": "2.0.0",
+    "graphql-tag": "2.12.6",
+    "graphql-ws": "5.16.0",
     "mssql": "^11.0.1",
     "node-notifier": "^10.0.1",
+    "passport": "^0.7.0",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
     "tedious": "^19.0.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -34,9 +48,8 @@
     "@types/express-session": "1.18.0",
     "@types/node": "^22.5.0",
     "@types/node-notifier": "8.0.5",
+    "@types/passport": "1.0.16",
     "@types/sequelize": "^4.28.20",
-    "@typescript-eslint/eslint-plugin": "^8.4.0",
-    "@typescript-eslint/parser": "^8.4.0",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-node": "^11.1.0",
