--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/express-session": "1.18.0",
+    "@types/jsonwebtoken": "9.0.7",
     "@types/node": "^22.5.0",
     "@types/node-notifier": "8.0.5",
     "@types/passport": "1.0.16",
