feat: authenticate api

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # General settings
 NODE_ENV=development
-ENV=development
 
 # Body parser limit
 BODY_PARSER_LIMIT=50mb
 
 # Session configuration
+SESSION_NAME=manage-applicant
 SESSION_COLLECTION_NAME=sessions
 SESSION_SECRET=manage-applicant-ai
 SESSION_MAX_AGE=86400000
