--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
+    "connect-session-sequelize": "^7.1.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
